# Huxley

./: .env.example  .gitignore  CLAUDE.md  DOCS_REVIEW.md  LICENSE  README.md  pyproject.toml
.claude/: launch.json
clients/firmware/: partitions.csv  sdkconfig.defaults
clients/firmware/tests/: CMakeLists.txt  test_hux_proto.c  test_hux_ws_frag.c
clients/pwa/: package.json  tsconfig.json
docs/: README.md  architecture.md  clients.md  concepts.md  decisions.md  extensibility.md  io-plane.md  landing-audit.md  landing-critic.md  landing-overnight.md  observability.md  protocol.md  review-notes.md  roadmap.md  skill-marketplace.md  sounds.md  triage.md  turns.md  verifying.md  vision.md
docs-site/: .gitignore  next.config.mjs  package.json  tsconfig.tsbuildinfo
docs-site/app/: global.css  layout.tsx
docs-site/lib/: layout.shared.tsx  source.ts
docs/personas/: README.md  abuelos.md  basic.md  basicos.md  buddy.md  chief.md  librarian.md
docs/research/: huxley-web-brief.md  huxley-web-ui-surfaces.md  realtime-suspend.md  skill-ui-architecture.md  sonic-ux.md  telegram-voice.md
docs/skills/: README.md  audiobooks.md  authoring.md  calls.md  comms-telegram.md  index.md  installing.md  news.md  radio.md  reminders.md  search.md  telegram.md  timers.md
firmware/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/docs/: architecture.md  debugging.md  decisions.md  triage.md
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/tests/: CMakeLists.txt  README.md
firmware/tools/: README.md  serial-capture.sh
huxley-landing/: package.json
huxley-landing/src/: Landing.tsx
personas/abuelos/: README.md  persona.yaml
personas/basicos/: persona.yaml
scripts/: extract_sounds.py  migrate-data-to-persona.sh  smoke_t114.py  synth_sounds.py
scripts/launchd/: README.md  com.huxley.server.plist  install.sh  uninstall.sh
server/: pyproject.toml
server/runtime/: .env.example  pyproject.toml
server/runtime/src/huxley/: __init__.py  __main__.py  app.py  config.py  cost.py  installer.py  loader.py  marketplace.py  persona.py  persona_yaml.py  reconnect.py  runtime.py  skills_state.py  summarize.py
server/runtime/src/huxley/constraints/: __init__.py
server/runtime/src/huxley/focus/: __init__.py
server/runtime/src/huxley/server/: server.py
server/runtime/src/huxley/state/: machine.py
server/runtime/src/huxley/storage/: backup.py  db.py  secrets.py  skill.py
server/runtime/src/huxley/turn/: __init__.py  factory.py  mic_router.py  observers.py
server/runtime/src/huxley/voice/: openai_realtime.py  provider.py  stub.py
server/runtime/tests/: test_config.py  test_persona.py
server/runtime/tests/integration/: replay.py
server/runtime/tests/integration/fixtures/: audiobook_play_basic.jsonl
server/runtime/tests/unit/: test_background_supervisor.py  test_client_event_subscription.py  test_coordinator_input_claim.py  test_coordinator_skill_integration.py  test_cost.py  test_end_to_end_with_stub.py  test_firmware_contract.py  test_focus_manager.py  test_installer.py  test_marketplace.py  test_mic_router.py  test_openai_realtime.py  test_persona_yaml.py  test_runtime.py  test_secrets.py  test_sessions_protocol.py  test_skill_schema_version.py  test_skills_state.py  test_speaking_state.py  test_state_machine.py  test_storage.py  test_storage_backup.py
server/sdk/: CHANGELOG.md  README.md  pyproject.toml
server/sdk/src/huxley_sdk/: __init__.py  audio.py  registry.py  testing.py  types.py
server/sdk/tests/: test_audio.py  test_catalog.py  test_registry.py
server/skills/audiobooks/: CHANGELOG.md  README.md  pyproject.toml
server/skills/audiobooks/src/huxley_skill_audiobooks/: __init__.py  player.py  skill.py
server/skills/audiobooks/tests/: test_skill.py
server/skills/news/: CHANGELOG.md  README.md  pyproject.toml
server/skills/news/src/huxley_skill_news/: http.py  skill.py
server/skills/radio/: CHANGELOG.md  README.md  pyproject.toml
server/skills/radio/src/huxley_skill_radio/: player.py  skill.py
server/skills/radio/tests/: conftest.py  test_skill.py
server/skills/reminders/: CHANGELOG.md  README.md  pyproject.toml
server/skills/reminders/src/huxley_skill_reminders/: __init__.py  skill.py
server/skills/reminders/tests/: test_skill.py
server/skills/search/: CHANGELOG.md  README.md  pyproject.toml
server/skills/search/src/huxley_skill_search/: __init__.py  provider.py  skill.py
server/skills/search/tests/: conftest.py  test_skill.py
server/skills/stocks/: CHANGELOG.md  README.md  pyproject.toml
server/skills/stocks/src/huxley_skill_stocks/: __init__.py  provider.py  skill.py
server/skills/stocks/tests/: test_provider.py  test_skill.py
server/skills/system/: CHANGELOG.md  README.md  pyproject.toml
server/skills/system/src/huxley_skill_system/: __init__.py  skill.py
server/skills/telegram/: CHANGELOG.md  README.md  pyproject.toml
server/skills/telegram/src/huxley_skill_telegram/: inbox.py  skill.py  transport.py
server/skills/telegram/tests/: test_inbox.py  test_skill.py  test_transport.py
server/skills/timers/: CHANGELOG.md  README.md  pyproject.toml
server/skills/timers/src/huxley_skill_timers/: __init__.py  skill.py
server/skills/timers/tests/: test_skill.py
server/tests/: conftest.py  test_config.py
site/: index.html  package.json  vercel.json  vite.config.ts
site/public/: 404.html  manifest.webmanifest
site/scripts/: build-icons.py
site/src/: Landing.tsx  main.tsx
spikes/: README.md  realtime_suspend.py  test_caller.py  test_telegram_call.py  test_telegram_mediastream_fifo.py
src/abuel_os/: __init__.py  __main__.py  app.py  config.py  logging.py  types.py
tests/: conftest.py  test_config.py
tests/unit/: test_audiobooks_skill.py  test_mpv_client.py  test_session_manager.py  test_skill_registry.py
web/: .env.local.example  .gitignore  index.html  mdx-components.tsx  next.config.mjs  package.json  source.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/.claude/: launch.json
web/app/: global.css  (+1 more)
(+238 files in other folders)
