[project]
name = "abuel-os"
version = "0.1.0"
description = "Voice assistant for elderly users — conversational AI with extensible skills"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.60",
    "websockets>=14.0",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.20",
    "structlog>=24.4",
]

# openwakeword is installed separately on the Pi (tflite-runtime has no 3.13 wheels).
# pyaudio is in dev deps — install portaudio first: brew install portaudio

[project.scripts]
abuel-os = "abuel_os.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "pyaudio>=0.2.14",  # brew install portaudio  first
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abuel_os"]

[tool.ruff]
target-version = "py313"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "PTH",   # flake8-use-pathlib
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["abuel_os"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "openwakeword.*",
    "pyaudio.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external services (API keys, mpv, etc.)",
]
