[project]
name = "huxley"
version = "0.1.0"
description = "Huxley — voice agent framework runtime."
requires-python = ">=3.13"
dependencies = [
    # Framework ships empty: only the SDK + I/O infra. Every skill is
    # an independent PyPI package the persona's installer pulls in
    # via `uv add huxley-skill-<name>`. See docs/skill-marketplace.md
    # § "Framework ships empty". The workspace is a dev-time convenience
    # for iterating on the SDK + first-party skills together; the
    # canonical distribution path is "uv add ..." for every skill,
    # including the first-party ones.
    "huxley-sdk>=0.1.1,<0.2",
    "openai>=1.60",
    "websockets>=14.0",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "structlog>=24.4",
]

# openwakeword is installed separately on the Pi (tflite-runtime has no 3.13 wheels).

[project.scripts]
huxley = "huxley.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
]
# Build-time deps for scripts/synth_sounds.py — render the earcon palette.
# Never imported at runtime; the rendered WAVs are committed to git.
synth = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pedalboard>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external services (API keys, ffmpeg, etc.)",
]
