[project]
name = "huxley-sdk"
version = "0.1.0"
description = "Skill author SDK for Huxley voice agents."
requires-python = ">=3.13"
dependencies = [
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
