[project]
name = "huxley-skill-news"
version = "0.1.0"
description = "News + weather skill for Huxley. Fetches from Open-Meteo (weather) and Google News RSS."
requires-python = ">=3.13"
dependencies = [
    "huxley-sdk",
    "httpx>=0.27",
]

[project.entry-points."huxley.skills"]
news = "huxley_skill_news:NewsSkill"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley_skill_news"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
