[project]
name = "huxley-skill-news"
version = "0.1.0"
description = "News headlines + weather for Huxley — Google News RSS + Open-Meteo, no API keys, multi-language."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Mario Ruiz", email = "marioalejandroruizsarmiento@gmail.com" }]
keywords = ["huxley", "voice-agent", "skill", "news", "weather", "rss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "huxley-sdk>=0.1.1,<0.2",
    "httpx>=0.27",
]

[project.entry-points."huxley.skills"]
news = "huxley_skill_news:NewsSkill"

[project.urls]
Homepage = "https://github.com/ma-r-s/Huxley"
Source = "https://github.com/ma-r-s/Huxley/tree/main/server/skills/news"
Issues = "https://github.com/ma-r-s/Huxley/issues"
Changelog = "https://github.com/ma-r-s/Huxley/blob/main/server/skills/news/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley_skill_news"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
