[project]
name = "huxley-skill-radio"
version = "0.1.0"
description = "Internet radio playback for Huxley. Streams from a configured list of HTTP/Icecast URLs via ffmpeg."
requires-python = ">=3.13"
dependencies = [
    "huxley-sdk",
]

[project.entry-points."huxley.skills"]
radio = "huxley_skill_radio:RadioSkill"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley_skill_radio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
