[project]
name = "huxley-skill-reminders"
version = "0.1.0"
description = "Reminders skill for Huxley (medication/appointment/generic, persistent, with retry escalation and recurrence)."
requires-python = ">=3.13"
dependencies = [
    "huxley-sdk",
    # Recurrence rules are stored and evaluated as RFC 5545 RRULE strings
    # (e.g. "FREQ=DAILY", "FREQ=WEEKLY;BYDAY=MO,WE,FR"). `dateutil.rrule`
    # is the canonical implementation, handles tz-aware dtstart correctly
    # so DST transitions don't drift the local fire time.
    "python-dateutil>=2.9",
]

[project.entry-points."huxley.skills"]
reminders = "huxley_skill_reminders:RemindersSkill"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley_skill_reminders"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
