[project]
name = "huxley-skill-search"
version = "0.1.0"
description = "Web search skill for Huxley. Free, no-API-key DuckDuckGo lookups via the ddgs package — for current/live info the LLM doesn't already know."
requires-python = ">=3.13"
dependencies = [
    "huxley-sdk",
    "ddgs>=9.0",
]

[project.entry-points."huxley.skills"]
search = "huxley_skill_search:SearchSkill"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley_skill_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
