[project]
name = "huxley-skill-stocks"
version = "0.1.0"
description = "Voice-controlled stock quotes for Huxley via Alpha Vantage. Reference skill for the third-party authoring path."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Mario Ruiz", email = "marioalejandroruizsarmiento@gmail.com" }]
keywords = ["huxley", "voice-agent", "skill", "stocks", "alpha-vantage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "huxley-sdk>=0.1.1,<0.2",
    "httpx>=0.27",
]

[project.entry-points."huxley.skills"]
stocks = "huxley_skill_stocks.skill:StocksSkill"

[project.urls]
Homepage = "https://github.com/ma-r-s/Huxley"
Source = "https://github.com/ma-r-s/Huxley/tree/main/server/skills/stocks"
Issues = "https://github.com/ma-r-s/Huxley/issues"
Changelog = "https://github.com/ma-r-s/Huxley/blob/main/server/skills/stocks/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley_skill_stocks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
