[project]
name = "huxley-skill-system"
version = "0.1.0"
description = "System control skill for Huxley (volume, time)."
requires-python = ">=3.13"
dependencies = [
    "huxley-sdk",
]

[project.entry-points."huxley.skills"]
system = "huxley_skill_system:SystemSkill"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley_skill_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
