[project]
name = "huxley-skill-telegram"
version = "0.1.0"
description = "Full-duplex Telegram voice + text for Huxley — single Pyrogram userbot, p2p calls via py-tgcalls + ntgcalls."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Mario Ruiz", email = "marioalejandroruizsarmiento@gmail.com" }]
keywords = ["huxley", "voice-agent", "skill", "telegram", "pyrogram", "py-tgcalls"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
]
dependencies = [
    "huxley-sdk",
    # kurigram: drop-in pyrogram replacement that py-tgcalls imports at runtime.
    # Mainline pyrogram 2.0.x is missing GroupcallForbidden; py-tgcalls fails to
    # import against it. See docs/research/telegram-voice.md.
    "kurigram>=2.2,<3",
    "py-tgcalls==2.2.11",
    # ntgcalls: native C++ backend py-tgcalls depends on. Must be >=2.2.1b2
    # because earlier versions have ntgcalls#44 (PacedSender paused on p2p,
    # silently drops outbound RTP). Without the fix live-PCM on p2p is silent.
    "ntgcalls>=2.2.1b2",
    # TgCrypto speeds up pyrogram's MTProto significantly. Optional but
    # recommended; omitting it doesn't break correctness.
    "tgcrypto",
]

[project.entry-points."huxley.skills"]
telegram = "huxley_skill_telegram:TelegramSkill"

[project.urls]
Homepage = "https://github.com/ma-r-s/Huxley"
Source = "https://github.com/ma-r-s/Huxley/tree/main/server/skills/telegram"
Issues = "https://github.com/ma-r-s/Huxley/issues"
Changelog = "https://github.com/ma-r-s/Huxley/blob/main/server/skills/telegram/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley_skill_telegram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
