[project]
name = "huxley-skill-timers"
version = "0.1.0"
description = "Timer / reminder skill for Huxley (one-shot proactive announcements)."
requires-python = ">=3.13"
dependencies = [
    "huxley-sdk",
]

[project.entry-points."huxley.skills"]
timers = "huxley_skill_timers:TimersSkill"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huxley_skill_timers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
